Fix cube on IE8
g

g

--- a/sugarcrm/themes/default/less/sugar.less
+++ b/sugarcrm/themes/default/less/sugar.less
@@ -174,6 +174,8 @@ article p:last-child {
   -webkit-transition: all .2s linear;
      -moz-transition: all .2s linear;
           transition: all .2s linear;
+  filter:  ~"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/badge_256.png',sizingMethod='scale')";
+  -ms-filter: ~"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/badge_256.png',sizingMethod='scale')";
   }
 .navbar .navbar-inner {
   height: 44px;
